--- a/index.html
+++ b/index.html
@@ -1,73 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <title>Shahid Zaka</title>
+</head>
+<body>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Shahid Zaka - Software Engineer</title>
-    <meta name="description" content="Software Engineer, Full Stack Developer, Frontend, Backend, Developer ">
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/images/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180817833-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<h1>Work in Progress</h1>
+<p>Coming soon...</p>
 
-    gtag('config', 'UA-180817833-1');
-    </script>
-  </head>
-
-  <body>
-
-    <!-- Header -->
-
-    <header class=" primary-header container group">
-      <h1 class="logo">
-        <a href="index.html">Shahid<br>Zaka</a>
-      </h1>
-            
-      <nav class="nav primary-nav">
-        <ul>
-          <li><a href="about.html">About</a></li><!--
-          --><li><a href="projects.html">Projects</a></li><!--
-          --><li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-
-    </header>
-
-    <!-- Hero -->
-
-    <section class="hero container">
-
-      <h2>Hello, my name is Shahid Zaka &mdash;<br>Software engineer, and full stack developer.</h2>
-
-      <p>I am an entrepreneur, dreamer, and aspiring learner. To learn more about me, <a href="about.html"> go here</a>. I have worked on few projects, to see the projects <a href="projects.html">visit here</a>.</p>
-
-      <a class="btn btn-alt" href="assets/files/shahid-zaka-resume.pdf">Get Resume</a>
-
-    </section>
-
-    <!-- Footer -->
-
-    <footer class="primary-footer container group">
-
-      <small>&copy; Shahid Zaka</small>
-
-      <nav class="footer-nav">
-        <ul>
-          <li><a href="mailto:szaka02@gmail.com">Email</a></li><!--
-          --><li><a href="https://www.linkedin.com/in/szaka/">Linkedin</a></li><!--
-          --><li><a href="https://github.com/szaka">Github</a></li><!--
-          --><li><a href="https://angel.co/u/szaka">Angel List</a></li>
-        </ul>
-      </nav>
-
-    </footer>
-        
-  </body>
-
+</body>
 </html>
